--- a/src/main/resources/templates/invoice.html
+++ b/src/main/resources/templates/invoice.html
@@ -90,7 +90,7 @@
     </thead>
     <tbody>
     <tr>
-        <td>Consommation SMS du mois</td>
+        <td>Consommation de SMS </td>
         <td class="right" th:text="${consommation}">1200</td>
         <td class="right" th:text="${prixUnitaire}">20</td>
         <td class="right" th:text="${montant}">24000</td>
